alignment in responsive corrected

--- a/src/ignitus-JobConfirmation/Styles/style.scss
+++ b/src/ignitus-JobConfirmation/Styles/style.scss
@@ -243,6 +243,10 @@ $reddit-color: #ff5706;
     }
   .card-body {
     width: 80%;
+  }
+  .job-details-outer {
+    margin: 20px;
+    margin-bottom: 0;
   }  
 }
 
